--- a/preload.html
+++ b/preload.html
@@ -2,200 +2,203 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<title>Loading...</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>جاري التحميل...</title>
 
 <style>
+*{box-sizing:border-box;margin:0;padding:0}
+
 body{
-  margin:0;
-  background:#000;
+  font-family:Tahoma,Arial;
+  background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
   color:#fff;
-  font-family:Arial, sans-serif;
-  overflow:hidden;
+}
+
+.container{
+  width:90%;
+  max-width:420px;
+  background:rgba(0,0,0,.7);
+  border-radius:20px;
+  padding:25px;
   text-align:center;
 }
 
-/* ===== شاشة التحميل الأصلية ===== */
-#loading-screen{
-  padding-top:30px;
-}
-
-#logo{
-  width:160px;
+.logo{
+  font-size:50px;
   margin-bottom:10px;
 }
 
-#loading-text{
-  color:#ffcc00;
-  font-size:20px;
-  margin:10px 0;
+h1{
+  font-size:22px;
+  margin-bottom:8px;
 }
 
-#lights{
-  display:flex;
-  justify-content:center;
-  gap:10px;
-  margin:15px 0;
+.subtitle{
+  font-size:14px;
+  opacity:.85;
+  margin-bottom:20px;
 }
 
-.light{
-  width:16px;
-  height:16px;
-  border-radius:50%;
-  background:#222;
-  border:1px solid #444;
-}
-
-.light.on{ background:#ffcc00; box-shadow:0 0 10px #ffcc00; }
-
-/* ===== اللعبة (تحت التحميل) ===== */
-#game-wrapper{
-  margin-top:20px;
-}
-
-#game{
-  position:relative;
-  width:320px;
-  height:360px;
-  margin:0 auto;
-  background:#111;
-  border:2px solid #555;
+/* progress */
+.progress{
+  width:100%;
+  height:10px;
+  background:#333;
+  border-radius:5px;
   overflow:hidden;
+  margin-bottom:10px;
+}
+.progress span{
+  display:block;
+  height:100%;
+  width:0%;
+  background:linear-gradient(90deg,#3498db,#2ecc71);
+  transition:.3s;
 }
 
-/* اللاعب */
-#player{
+.percent{
+  font-size:16px;
+  margin-bottom:15px;
+}
+
+/* game */
+.game{
+  background:#111;
+  border-radius:12px;
+  height:180px;
+  position:relative;
+  overflow:hidden;
+  margin-bottom:15px;
+}
+
+.runner{
+  width:30px;
+  height:30px;
+  background:#2ecc71;
+  border-radius:6px;
   position:absolute;
   bottom:10px;
-  font-size:30px;
+  left:50%;
   transform:translateX(-50%);
 }
 
-/* العناصر */
-.item{
+.block{
+  width:30px;
+  height:30px;
+  background:#e74c3c;
   position:absolute;
-  font-size:26px;
+  top:-30px;
+  border-radius:6px;
 }
 
-/* التحكم */
-#controls{
-  width:320px;
-  margin:10px auto;
+/* controls */
+.controls{
   display:flex;
-  justify-content:space-between;
+  gap:10px;
+  margin-bottom:15px;
+}
+.controls button{
+  flex:1;
+  padding:10px;
+  border:none;
+  border-radius:20px;
+  background:#3498db;
+  color:#fff;
+  font-weight:bold;
 }
 
-button{
-  font-size:22px;
-  padding:6px 20px;
-  cursor:pointer;
+.continue{
+  display:none;
+  padding:12px;
+  background:#2ecc71;
+  border:none;
+  border-radius:25px;
+  width:100%;
+  font-weight:bold;
 }
 </style>
 </head>
 
 <body>
 
-<!-- شاشة التحميل -->
-<div id="loading-screen">
-  <img id="logo" src="image/0.png" alt="logo">
-  <div id="loading-text">جاري التحميل...</div>
+<div class="container">
+  <div class="logo">🚇</div>
+  <h1>جاري التحميل</h1>
+  <div class="subtitle">اصبر شوية واستمتع باللعبة</div>
 
-  <div id="lights">
-    <div class="light"></div>
-    <div class="light"></div>
-    <div class="light"></div>
-    <div class="light"></div>
+  <div class="progress">
+    <span id="bar"></span>
   </div>
-</div>
+  <div class="percent" id="percent">0%</div>
 
-<!-- اللعبة -->
-<div id="game-wrapper">
-  <div id="game">
-    <div id="player">👨‍⚕️</div>
+  <div class="game" id="game">
+    <div class="runner" id="runner"></div>
   </div>
 
-  <div id="controls">
-    <!-- زر ظاهر يسار لكن فعليًا يمين -->
-    <button onclick="moveRight()">➡️</button>
-
-    <!-- زر ظاهر يمين لكن فعليًا شمال -->
-    <button onclick="moveLeft()">⬅️</button>
+  <div class="controls">
+    <button onclick="move(-1)">◀</button>
+    <button onclick="move(1)">▶</button>
   </div>
+
+  <button class="continue" id="continue" onclick="go()">متابعة ➡️</button>
 </div>
 
 <script>
-/* ===== أنوار التحميل ===== */
-const lights = document.querySelectorAll(".light");
-let lightIndex = 0;
-setInterval(()=>{
-  lights.forEach(l=>l.classList.remove("on"));
-  lights[lightIndex].classList.add("on");
-  lightIndex = (lightIndex+1)%lights.length;
-},400);
+/* loading */
+let p=0;
+const bar=document.getElementById("bar");
+const percent=document.getElementById("percent");
+const cont=document.getElementById("continue");
 
-/* ===== إعدادات اللعبة ===== */
-const game = document.getElementById("game");
-const player = document.getElementById("player");
-const lanes = [80,160,240];
-let laneIndex = 1;
-
-function updatePlayer(){
-  player.style.left = lanes[laneIndex]+"px";
-}
-updatePlayer();
-
-/* ===== حركة معكوسة ===== */
-function moveLeft(){
-  if(laneIndex < 2){
-    laneIndex++;
-    updatePlayer();
+const loader=setInterval(()=>{
+  p+=1;
+  bar.style.width=p+"%";
+  percent.innerText=p+"%";
+  if(p>=100){
+    clearInterval(loader);
+    cont.style.display="block";
   }
+},80);
+
+/* game */
+const game=document.getElementById("game");
+const runner=document.getElementById("runner");
+let pos=0;
+
+function move(dir){
+  pos+=dir;
+  pos=Math.max(-1,Math.min(1,pos));
+  runner.style.left=50+pos*30+"%";
 }
 
-function moveRight(){
-  if(laneIndex > 0){
-    laneIndex--;
-    updatePlayer();
-  }
-}
+function spawn(){
+  if(p>=100)return;
+  const b=document.createElement("div");
+  b.className="block";
+  b.style.left=[20,50,80][Math.floor(Math.random()*3)]+"%";
+  game.appendChild(b);
 
-/* ===== كيبورد معكوس ===== */
-document.addEventListener("keydown",e=>{
-  if(e.key==="ArrowLeft") moveRight();
-  if(e.key==="ArrowRight") moveLeft();
-});
-
-/* ===== سقوط عنصر واحد فقط ===== */
-function spawnItem(){
-  const el = document.createElement("div");
-  el.className="item";
-
-  const r = Math.random();
-  if(r < 0.4) el.textContent="🦠";
-  else if(r < 0.7) el.textContent="☣️";
-  else el.textContent="💊";
-
-  const lane = Math.floor(Math.random()*3);
-  el.style.left = lanes[lane]+"px";
-  el.style.top="0px";
-  game.appendChild(el);
-
-  let y=0;
-  function fall(){
-    y+=2;
-    el.style.top=y+"px";
-
-    if(y < game.clientHeight){
-      requestAnimationFrame(fall);
-    }else{
-      el.remove();
+  let y=-30;
+  const fall=setInterval(()=>{
+    y+=4;
+    b.style.top=y+"px";
+    if(y>180){
+      clearInterval(fall);
+      b.remove();
     }
-  }
-  fall();
+  },30);
 }
 
-/* ===== عنصر كل شوية ===== */
-setInterval(spawnItem,1200);
+setInterval(spawn,700);
+
+/* continue */
+function go(){
+  window.location.href="index.html";
+}
 </script>
 
 </body>
