--- a/preload.html
+++ b/preload.html
@@ -2,203 +2,211 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>جاري التحميل...</title>
+<title>Preload Game</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-*{box-sizing:border-box;margin:0;padding:0}
-
 body{
-  font-family:Tahoma,Arial;
-  background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
-  min-height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  color:#fff;
-}
-
-.container{
-  width:90%;
-  max-width:420px;
-  background:rgba(0,0,0,.7);
-  border-radius:20px;
-  padding:25px;
-  text-align:center;
-}
-
-.logo{
-  font-size:50px;
-  margin-bottom:10px;
-}
-
-h1{
-  font-size:22px;
-  margin-bottom:8px;
-}
-
-.subtitle{
-  font-size:14px;
-  opacity:.85;
-  margin-bottom:20px;
-}
-
-/* progress */
-.progress{
-  width:100%;
-  height:10px;
-  background:#333;
-  border-radius:5px;
-  overflow:hidden;
-  margin-bottom:10px;
-}
-.progress span{
-  display:block;
-  height:100%;
-  width:0%;
-  background:linear-gradient(90deg,#3498db,#2ecc71);
-  transition:.3s;
-}
-
-.percent{
-  font-size:16px;
-  margin-bottom:15px;
-}
-
-/* game */
-.game{
+  margin:0;
   background:#111;
-  border-radius:12px;
-  height:180px;
-  position:relative;
+  color:#fff;
+  font-family:Arial;
   overflow:hidden;
-  margin-bottom:15px;
 }
 
-.runner{
-  width:30px;
-  height:30px;
-  background:#2ecc71;
-  border-radius:6px;
+/* UI */
+#ui{
+  display:flex;
+  justify-content:space-between;
+  padding:8px 12px;
+  background:#000;
+  font-size:14px;
+}
+
+/* Game */
+#game{
+  position:relative;
+  width:100vw;
+  height:calc(100vh - 120px);
+  background:#222;
+  overflow:hidden;
+}
+
+/* Player */
+#player{
   position:absolute;
-  bottom:10px;
+  bottom:8px;
+  font-size:42px;
   left:50%;
   transform:translateX(-50%);
 }
 
-.block{
-  width:30px;
-  height:30px;
-  background:#e74c3c;
+/* Items */
+.item{
   position:absolute;
-  top:-30px;
-  border-radius:6px;
+  font-size:30px;
 }
 
-/* controls */
-.controls{
+/* Controls (معكوسة) */
+#controls{
   display:flex;
-  gap:10px;
-  margin-bottom:15px;
-}
-.controls button{
-  flex:1;
+  justify-content:space-around;
   padding:10px;
-  border:none;
-  border-radius:20px;
-  background:#3498db;
-  color:#fff;
-  font-weight:bold;
+  background:#000;
 }
 
-.continue{
-  display:none;
-  padding:12px;
-  background:#2ecc71;
-  border:none;
-  border-radius:25px;
-  width:100%;
-  font-weight:bold;
+button{
+  font-size:22px;
+  padding:8px 22px;
 }
+
+/* Game Over */
+#gameOver{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.9);
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  z-index:5;
+}
+
+.hidden{display:none}
 </style>
 </head>
 
 <body>
 
-<div class="container">
-  <div class="logo">🚇</div>
-  <h1>جاري التحميل</h1>
-  <div class="subtitle">اصبر شوية واستمتع باللعبة</div>
+<div id="ui">
+  <div>❤️ <span id="hearts">0</span></div>
+  <div>🏆 <span id="score">0</span></div>
+</div>
 
-  <div class="progress">
-    <span id="bar"></span>
-  </div>
-  <div class="percent" id="percent">0%</div>
+<div id="game">
+  <div id="player">👨‍⚕️</div>
+</div>
 
-  <div class="game" id="game">
-    <div class="runner" id="runner"></div>
-  </div>
+<div id="controls">
+  <!-- معكوسين -->
+  <button id="btnRight">⬅️</button>
+  <button id="btnLeft">➡️</button>
+</div>
 
-  <div class="controls">
-    <button onclick="move(-1)">◀</button>
-    <button onclick="move(1)">▶</button>
-  </div>
-
-  <button class="continue" id="continue" onclick="go()">متابعة ➡️</button>
+<div id="gameOver" class="hidden">
+  <h2>Game Over</h2>
+  <button id="restart">🔄 إعادة اللعب</button>
 </div>
 
 <script>
-/* loading */
-let p=0;
-const bar=document.getElementById("bar");
-const percent=document.getElementById("percent");
-const cont=document.getElementById("continue");
+/* ================= GAME ================= */
 
-const loader=setInterval(()=>{
-  p+=1;
-  bar.style.width=p+"%";
-  percent.innerText=p+"%";
-  if(p>=100){
-    clearInterval(loader);
-    cont.style.display="block";
-  }
-},80);
+const game = document.getElementById("game");
+const player = document.getElementById("player");
+const heartsEl = document.getElementById("hearts");
+const scoreEl = document.getElementById("score");
+const gameOverBox = document.getElementById("gameOver");
 
-/* game */
-const game=document.getElementById("game");
-const runner=document.getElementById("runner");
-let pos=0;
+let gameWidth = game.clientWidth;
+let playerX = gameWidth / 2;
+let hearts = 0;
+let score = 0;
+let speed = 2;
+let running = true;
 
-function move(dir){
-  pos+=dir;
-  pos=Math.max(-1,Math.min(1,pos));
-  runner.style.left=50+pos*30+"%";
+/* Player */
+function updatePlayer(){
+  if(playerX < 0) playerX = 0;
+  if(playerX > gameWidth - 40) playerX = gameWidth - 40;
+  player.style.left = playerX + "px";
 }
 
-function spawn(){
-  if(p>=100)return;
-  const b=document.createElement("div");
-  b.className="block";
-  b.style.left=[20,50,80][Math.floor(Math.random()*3)]+"%";
-  game.appendChild(b);
+/* Controls (معكوسة) */
+function moveLeft(){ playerX += 30; updatePlayer(); }
+function moveRight(){ playerX -= 30; updatePlayer(); }
 
-  let y=-30;
-  const fall=setInterval(()=>{
-    y+=4;
-    b.style.top=y+"px";
-    if(y>180){
-      clearInterval(fall);
-      b.remove();
+document.getElementById("btnLeft").onclick = moveRight;
+document.getElementById("btnRight").onclick = moveLeft;
+
+document.addEventListener("keydown", e=>{
+  if(!running) return;
+  if(e.key === "ArrowLeft") moveRight();
+  if(e.key === "ArrowRight") moveLeft();
+});
+
+/* Spawn */
+function createItem(){
+  if(!running) return;
+
+  const el = document.createElement("div");
+  el.className = "item";
+
+  const r = Math.random();
+  el.textContent = r < 0.4 ? "🦠" : r < 0.7 ? "☣️" : "💊";
+
+  el.style.left = Math.random() * (gameWidth - 30) + "px";
+  el.style.top = "0px";
+  game.appendChild(el);
+
+  let y = 0;
+
+  const fall = () => {
+    if(!running){ el.remove(); return; }
+
+    y += speed;
+    el.style.top = y + "px";
+
+    const p = player.getBoundingClientRect();
+    const i = el.getBoundingClientRect();
+
+    if(i.bottom > p.top && i.left < p.right && i.right > p.left){
+      hit(el.textContent);
+      el.remove();
+      return;
     }
-  },30);
+
+    if(y < game.clientHeight){
+      requestAnimationFrame(fall);
+    }else{
+      el.remove();
+      score++;
+      scoreEl.textContent = score;
+    }
+  };
+
+  fall();
 }
 
-setInterval(spawn,700);
+/* Hit */
+function hit(type){
+  if(type === "💊") hearts++;
+  if(type === "🦠") hearts--;
+  if(type === "☣️") hearts -= 2;
 
-/* continue */
-function go(){
-  window.location.href="index.html";
+  heartsEl.textContent = hearts;
+  if(hearts < 0) endGame();
 }
+
+/* Loop */
+function loop(){
+  if(!running) return;
+  createItem();
+  createItem(); // اتنين
+  speed += 0.1;
+  setTimeout(loop, 1300);
+}
+
+/* End */
+function endGame(){
+  running = false;
+  gameOverBox.classList.remove("hidden");
+}
+
+document.getElementById("restart").onclick = ()=>location.reload();
+
+/* Init */
+updatePlayer();
+loop();
 </script>
 
 </body>
