--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-<meta name="version" content="2025.01.17.003">
+<meta name="version" content="2025.01.17.004">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>semester-3 / خريطة الكلية التفاعلية</title>
@@ -258,6 +258,14 @@ function replayPreload() {
 
 async function checkForUpdates() {
   try {
+    const lastCheck = localStorage.getItem('last_update_check');
+    const now = Date.now();
+    
+    if (lastCheck && (now - parseInt(lastCheck)) < 300000) {
+      console.log('⏱️ تم الفحص مؤخراً - تخطي');
+      return;
+    }
+
     console.log('🔍 فحص التحديثات...');
 
     const response = await fetch('https://api.github.com/repos/MUE24Med/semester-3/commits/main', {
@@ -271,17 +279,18 @@ async function checkForUpdates() {
 
     const data = await response.json();
     const latestCommitSha = data.sha.substring(0, 7);
-    const latestCommitDate = new Date(data.commit.author.date).getTime();
 
     const lastCommitSha = localStorage.getItem('last_commit_sha');
-    const lastUpdate = localStorage.getItem('last_update');
 
-    const hasUpdate = !lastCommitSha || 
-                      lastCommitSha !== latestCommitSha || 
-                      (lastUpdate && latestCommitDate > parseInt(lastUpdate));
+    if (!lastCommitSha) {
+      localStorage.setItem('last_commit_sha', latestCommitSha);
+      localStorage.setItem('last_update_check', now.toString());
+      console.log(`✅ تم حفظ SHA الحالي: ${latestCommitSha}`);
+      return;
+    }
 
-    if (hasUpdate) {
-      console.log(`🆕 تحديث جديد متاح! (${latestCommitSha})`);
+    if (lastCommitSha !== latestCommitSha) {
+      console.log(`🆕 تحديث جديد! ${lastCommitSha} → ${latestCommitSha}`);
 
       if ('caches' in window) {
         const cacheNames = await caches.keys();
@@ -290,22 +299,12 @@ async function checkForUpdates() {
       }
 
       localStorage.setItem('last_commit_sha', latestCommitSha);
-      localStorage.setItem('last_update', latestCommitDate.toString());
+      localStorage.setItem('last_update_check', now.toString());
 
-      const commitMessage = data.commit.message.split('\n')[0];
-      const shouldUpdate = confirm(
-        `🎉 يوجد تحديث جديد!\n\n` +
-        `📝 ${commitMessage}\n\n` +
-        `هل تريد تحديث الموقع الآن للحصول على آخر التحسينات؟`
-      );
-
-      if (shouldUpdate) {
-        console.log('🔄 إعادة تحميل الصفحة...');
-        window.location.reload(true);
-      } else {
-        console.log('⏳ المستخدم اختار التحديث لاحقاً');
-      }
+      console.log('🔄 إعادة تحميل الصفحة...');
+      window.location.reload(true);
     } else {
+      localStorage.setItem('last_update_check', now.toString());
       console.log(`✅ الموقع محدث (${latestCommitSha})`);
     }
   } catch (error) {
@@ -313,16 +312,22 @@ async function checkForUpdates() {
   }
 }
 
+let updateCheckScheduled = false;
+
 window.addEventListener('load', () => {
-  setTimeout(checkForUpdates, 3000);
+  if (!updateCheckScheduled) {
+    updateCheckScheduled = true;
+    setTimeout(checkForUpdates, 5000);
+  }
 });
 
-setInterval(checkForUpdates, 10 * 60 * 1000);
-
 document.addEventListener('visibilitychange', () => {
-  if (!document.hidden) {
-    console.log('👁️ المستخدم عاد للصفحة - فحص التحديثات');
-    setTimeout(checkForUpdates, 2000);
+  if (!document.hidden && !updateCheckScheduled) {
+    updateCheckScheduled = true;
+    setTimeout(() => {
+      checkForUpdates();
+      updateCheckScheduled = false;
+    }, 3000);
   }
 });
 </script>
