--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-<meta name="version" content="2025.01.17.004">
+<meta name="version" content="2025.01.17.005">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>semester-3 / خريطة الكلية التفاعلية</title>
@@ -25,16 +25,19 @@
   <link rel="stylesheet" href="style.css">
 
 <script>
-  const preloadDone = localStorage.getItem("preload_done");
-  const lastVisit = localStorage.getItem("last_visit_timestamp");
-  const now = Date.now();
-  
-  if (!preloadDone || !lastVisit || (now - lastVisit > 86400000)) {
+const preloadDone = localStorage.getItem("preload_done");
+const lastVisit = localStorage.getItem("last_visit_timestamp");
+const now = Date.now();
+
+const needsPreload = !preloadDone || !lastVisit || (now - lastVisit > 86400000);
+
+if (needsPreload) {
+    console.log('🔄 تحويل إلى شاشة التحميل المسبق');
+    location.replace("preload.html");
+} else {
+    console.log('✅ الملفات محفوظة في الكاش');
     localStorage.setItem("last_visit_timestamp", now);
-    if (!preloadDone) {
-      location.replace("preload.html");
-    }
-  }
+}
 </script>
 </head>
 <body>
@@ -260,55 +263,53 @@ async function checkForUpdates() {
   try {
     const lastCheck = localStorage.getItem('last_update_check');
     const now = Date.now();
-    
+
     if (lastCheck && (now - parseInt(lastCheck)) < 300000) {
-      console.log('⏱️ تم الفحص مؤخراً - تخطي');
+      console.log('⏱️ تم الفحص مؤخراً');
       return;
     }
 
     console.log('🔍 فحص التحديثات...');
 
-    const response = await fetch('https://api.github.com/repos/MUE24Med/semester-3/commits/main', {
-      cache: 'no-store'
-    });
+    const response = await fetch(
+      'https://api.github.com/repos/MUE24Med/semester-3/commits/main',
+      { 
+        cache: 'no-store',
+        headers: { 'Accept': 'application/vnd.github.v3+json' }
+      }
+    );
 
-    if (!response.ok) {
-      console.log('⚠️ فشل الاتصال بـ GitHub');
-      return;
-    }
+    if (!response.ok) return;
 
     const data = await response.json();
-    const latestCommitSha = data.sha.substring(0, 7);
+    const latestSha = data.sha.substring(0, 7);
+    const lastSha = localStorage.getItem('last_commit_sha');
 
-    const lastCommitSha = localStorage.getItem('last_commit_sha');
-
-    if (!lastCommitSha) {
-      localStorage.setItem('last_commit_sha', latestCommitSha);
+    if (!lastSha) {
+      localStorage.setItem('last_commit_sha', latestSha);
       localStorage.setItem('last_update_check', now.toString());
-      console.log(`✅ تم حفظ SHA الحالي: ${latestCommitSha}`);
+      console.log(`✅ SHA الحالي: ${latestSha}`);
       return;
     }
 
-    if (lastCommitSha !== latestCommitSha) {
-      console.log(`🆕 تحديث جديد! ${lastCommitSha} → ${latestCommitSha}`);
+    if (lastSha !== latestSha) {
+      console.log(`🆕 تحديث جديد: ${lastSha} → ${latestSha}`);
 
-      if ('caches' in window) {
-        const cacheNames = await caches.keys();
-        console.log('🗑️ حذف الكاش القديم...');
-        await Promise.all(cacheNames.map(name => caches.delete(name)));
-      }
+      const cacheNames = await caches.keys();
+      await Promise.all(cacheNames.map(name => caches.delete(name)));
 
-      localStorage.setItem('last_commit_sha', latestCommitSha);
-      localStorage.setItem('last_update_check', now.toString());
+      localStorage.setItem('last_commit_sha', latestSha);
+      localStorage.removeItem('preload_done');
 
-      console.log('🔄 إعادة تحميل الصفحة...');
+      console.log('🔄 إعادة التحميل...');
       window.location.reload(true);
     } else {
       localStorage.setItem('last_update_check', now.toString());
-      console.log(`✅ الموقع محدث (${latestCommitSha})`);
+      console.log(`✅ محدث (${latestSha})`);
     }
+
   } catch (error) {
-    console.log('⚠️ خطأ في فحص التحديثات:', error);
+    console.error('⚠️ خطأ في الفحص:', error);
   }
 }
 
