--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-<meta name="version" content="2025.01.17.005">
+<meta name="version" content="2025.01.18.002">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>semester-3 / خريطة الكلية التفاعلية</title>
@@ -41,14 +41,6 @@ if (needsPreload) {
 </script>
 </head>
 <body>
-
-<button 
-  onclick="replayPreload()" 
-  style="position: fixed; bottom: 10px; right: 10px; z-index: 99999; 
-         padding: 10px; background: #ff5722; color: white; border: none; 
-         border-radius: 8px; cursor: pointer; font-size: 14px; box-shadow: 0 4px 10px rgba(0,0,0,0.3);">
-  🔄 إعادة شاشة التحميل
-</button>
 
 <div id="group-selection-screen">
   <div id="group-selection-content">
@@ -187,19 +179,8 @@ if (needsPreload) {
     <g id="group-specific-content"></g>
 
     <g id="fixed-controls-layer">
-      <g id="reset-btn" style="cursor: pointer;" role="button" tabindex="0">
-        <rect x="654" y="100" width="250" height="50" rx="10" fill="#d32f2f" stroke="#fff" stroke-width="2"/>
-        <text 
-          id="reset-btn-text" 
-          x="779" 
-          y="130" 
-          text-anchor="middle" 
-          fill="white" 
-          font-weight="bold"
-          font-size="18"
-        >🔄 Reset</text>
-      </g>
-
+      <!-- الصف الأول: 3 أزرار -->
+      <!-- زر تغيير المجموعة - يسار -->
       <g id="change-group-btn" style="cursor: pointer;" role="button" tabindex="0">
         <rect x="120" y="100" width="250" height="50" rx="10" fill="#2e7d32" stroke="#fff" stroke-width="2"/>
         <text 
@@ -213,6 +194,34 @@ if (needsPreload) {
         >Change Group 🔄</text>
       </g>
 
+      <!-- زر العودة لشاشة التحميل - وسط -->
+      <g id="preload-btn" style="cursor: pointer;" role="button" tabindex="0">
+        <rect x="387" y="100" width="250" height="50" rx="10" fill="#1976d2" stroke="#fff" stroke-width="2"/>
+        <text 
+          x="512" 
+          y="130" 
+          text-anchor="middle" 
+          fill="white" 
+          font-weight="bold"
+          font-size="18"
+        >🔄 Preload</text>
+      </g>
+
+      <!-- زر Reset - يمين -->
+      <g id="reset-btn" style="cursor: pointer;" role="button" tabindex="0">
+        <rect x="654" y="100" width="250" height="50" rx="10" fill="#d32f2f" stroke="#fff" stroke-width="2"/>
+        <text 
+          id="reset-btn-text" 
+          x="779" 
+          y="130" 
+          text-anchor="middle" 
+          fill="white" 
+          font-weight="bold"
+          font-size="18"
+        >🔄 Reset</text>
+      </g>
+
+      <!-- الصف الثاني: زر الرجوع الكبير -->
       <g id="back-button-group" style="cursor: pointer;" role="button" tabindex="0">
         <rect 
           id="back-btn" 
