--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@ if (needsPreload) {
   </div>
 </div>
 
+<!-- زر العين المستقل -->
+<div id="eye-toggle-standalone" class="top" role="button" aria-label="إظهار شريط البحث" tabindex="0">
+  👁️
+</div>
+
 <div id="loading-overlay">
   <div id="loading-content">
     <img 
