--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ if (needsPreload) {
           y="130" 
           text-anchor="middle"
           dominant-baseline="middle"
-        >🔄 Preload</text>
+        >🔄 شاشة التحميل</text>
       </g>
 
       <g id="reset-btn" style="cursor: pointer;" role="button" tabindex="0">
@@ -229,7 +229,7 @@ if (needsPreload) {
           y="130" 
           text-anchor="middle"
           dominant-baseline="middle"
-        >🔄 Reset</text>
+        >🔄 Clear cache</text>
       </g>
 
       <!-- الصف الثاني: زر الرجوع الكبير -->
