--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ if (needsPreload) {
           y="130" 
           text-anchor="middle"
           dominant-baseline="middle"
-        >🔄 Clear cache</text>
+        >🔄 Reset</text>
       </g>
 
       <!-- الصف الثاني: زر الرجوع الكبير -->
