--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-<meta name="version" content="2025.01.21.001">
+<meta name="version" content="2025.01.18.006">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>semester-3 / خريطة الكلية التفاعلية</title>
@@ -108,6 +108,7 @@ if (needsPreload) {
   </div>
 </div>
 
+<!-- زر العين المستقل -->
 <div id="eye-toggle-standalone" class="top" role="button" aria-label="إظهار شريط البحث" tabindex="0">
   👁️
 </div>
@@ -164,6 +165,7 @@ if (needsPreload) {
   >
     <defs></defs>
 
+    <!-- الطبقة الأولى: wood.webp في الخلفية -->
     <g transform="translate(0,0)" id="files-list-container" style="isolation: isolate;">
       <image 
         data-src="image/wood.webp" 
@@ -176,10 +178,13 @@ if (needsPreload) {
       />
     </g>
 
+    <!-- الطبقة الثانية: المحتوى الديناميكي -->
     <g id="dynamic-links-group" style="isolation: isolate;"></g>
-
+    
+    <!-- الطبقة الثالثة: محتوى المجموعة -->
     <g id="group-specific-content" style="isolation: isolate;"></g>
 
+    <!-- الطبقة الرابعة: Upper_wood -->
     <g id="upper-wood-layer" style="isolation: isolate; pointer-events: none; z-index: 99999;">
       <image 
         data-src="image/Upper_wood.webp" 
@@ -192,7 +197,9 @@ if (needsPreload) {
       />
     </g>
 
+    <!-- الطبقة الخامسة والأخيرة: الأزرار فوق كل شيء -->
     <g id="fixed-controls-layer" style="isolation: isolate;">
+      <!-- الصف الأول: 3 أزرار -->
       <g id="change-group-btn" style="cursor: pointer;" role="button" tabindex="0">
         <rect x="120" y="100" width="250" height="50" rx="10"/>
         <text 
@@ -225,6 +232,7 @@ if (needsPreload) {
         >🔄 Reset</text>
       </g>
 
+      <!-- الصف الثاني: زر الرجوع الكبير -->
       <g id="back-button-group" style="cursor: pointer;" role="button" tabindex="0">
         <rect 
           id="back-btn" 
@@ -249,6 +257,7 @@ if (needsPreload) {
 <script defer src="script.js"></script>
 <script defer src="tracker.js"></script>
 
+<!-- Service Worker Registration -->
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
